@@ -1,3 +1,8 @@
+2004-10-12 Nobuo Yamashita  <nobsun@sampou.org>
+
+	* src/kahua/server.scm
+	- Added interp-rss
+
 2004-09-14 Kenji Hisazumi <nel@soraneko.com>
 
 	* src/kahua/query.scm, plugins/query.scm, test/query.scm:
